k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  annotations:
    # GKE의 경우 이 어노테이션이 있어야 GCP 로드밸런서가 생성됩니다.
    kubernetes.io/ingress.class: "gce" 
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: board-app-service
                port:
                  number: 8080
          # oauth 관련 요청도 백엔드로 요청되도록 설정
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: board-app-service
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: board-app-service
                port:
                  number: 8080
          # -----------------------------------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-frontend-service
                port:
                  number: 80
